hphp/hack/test/typecheck/lambda/lambda_reduce.php.like_types.exp
File "lambda_reduce.php", line 27, characters 12-146:
Invalid return type (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 26, characters 6-8:
Expected num
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 29, characters 29-53:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 29, characters 29-32:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 37, characters 20-26:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 37, characters 20-21:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 37, characters 20-26:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 19-20:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 19-20:
Tv is a constrained type parameter
File "lambda_reduce.php", line 37, characters 25-26:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 19-20:
But got dynamic
File "lambda_reduce.php", line 45, characters 46-54:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 45, characters 46-49:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 53, characters 27-42:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 53, characters 27-32:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 53, characters 27-42:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 19-20:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 19-20:
Tv is a constrained type parameter
File "lambda_reduce.php", line 53, characters 36-42:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 19-20:
But got dynamic
File "lambda_reduce.php", line 62, characters 25-36:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 23-24:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 23-24:
Ta is a constrained type parameter
File "lambda_reduce.php", line 62, characters 25-28:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 23-24:
But got dynamic
File "lambda_reduce.php", line 62, characters 25-36:
Typing error (Typing[4110])
File "lambda_reduce.php", line 7, characters 19-20:
Some type constraint(s) are violated here
File "lambda_reduce.php", line 7, characters 19-20:
Tv is a constrained type parameter
File "lambda_reduce.php", line 62, characters 32-36:
Expected num because this is used in an arithmetic operation
File "lambda_reduce.php", line 7, characters 19-20:
But got dynamic
